--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,27 @@
 #main {
     background-color: rgb(229, 245, 250); 
-    padding: 10px 75px 200px 75px;
-    min-height: 300px;
+    padding: 10px 10px 10px 10px;
+    min-height: 350px;
     min-width: 350px;
+}
+
+#save-button, #activate-button, #add-reponse-button {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px !important;
 }
 
 .row {
     margin: 25px 25px 25px 25px;  
+}
+
+hr.style-two {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+#icon-display {
+    width: 10%;
+    height: 10%;
 }
